--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -50,19 +50,55 @@
         <!--Home-->
         <scene sceneID="Y3R-Qy-ge9">
             <objects>
-                <tableViewController id="0Jt-0e-jh4" customClass="HomeTableViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController modalPresentationStyle="fullScreen" id="0Jt-0e-jh4" customClass="HomeTableViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="vum-nq-iOS">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Pk5-le-kZc">
-                                <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="120" id="Pk5-le-kZc" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="120"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Pk5-le-kZc" id="Mba-cX-xGj">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DS8-Z7-BYE">
+                                            <rect key="frame" x="16" y="11" width="65" height="65"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="65" id="IBz-H8-wau"/>
+                                                <constraint firstAttribute="height" constant="65" id="jN8-6j-RFe"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="John Doe" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vxC-Nb-X3y">
+                                            <rect key="frame" x="89" y="11" width="69" height="18"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tweet content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nsX-l2-iJl">
+                                            <rect key="frame" x="89" y="33" width="270" height="76"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="nsX-l2-iJl" firstAttribute="leading" secondItem="DS8-Z7-BYE" secondAttribute="trailing" constant="8" id="0p9-do-EV8"/>
+                                        <constraint firstItem="DS8-Z7-BYE" firstAttribute="leading" secondItem="Mba-cX-xGj" secondAttribute="leadingMargin" id="9ba-zY-eOe"/>
+                                        <constraint firstItem="vxC-Nb-X3y" firstAttribute="leading" secondItem="DS8-Z7-BYE" secondAttribute="trailing" constant="8" id="LoO-EO-z6Y"/>
+                                        <constraint firstItem="nsX-l2-iJl" firstAttribute="bottom" secondItem="Mba-cX-xGj" secondAttribute="bottomMargin" id="OCO-1A-Vdy"/>
+                                        <constraint firstItem="vxC-Nb-X3y" firstAttribute="top" secondItem="Mba-cX-xGj" secondAttribute="topMargin" id="Pv6-nt-GVt"/>
+                                        <constraint firstItem="nsX-l2-iJl" firstAttribute="top" secondItem="vxC-Nb-X3y" secondAttribute="bottom" constant="4" id="Qh5-3Y-wa8"/>
+                                        <constraint firstItem="nsX-l2-iJl" firstAttribute="trailing" secondItem="Mba-cX-xGj" secondAttribute="trailingMargin" id="e47-CZ-vd5"/>
+                                        <constraint firstItem="DS8-Z7-BYE" firstAttribute="top" secondItem="Mba-cX-xGj" secondAttribute="topMargin" id="vQH-Gm-KfE"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="profileImageView" destination="DS8-Z7-BYE" id="Zff-lJ-MrV"/>
+                                    <outlet property="tweetContent" destination="nsX-l2-iJl" id="Ne9-dh-TF8"/>
+                                    <outlet property="userNameLabel" destination="vxC-Nb-X3y" id="cmE-Pw-qX0"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -81,14 +117,14 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Z0M-Hy-VRz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="305" y="-73"/>
+            <point key="canvasLocation" x="304.80000000000001" y="-73.313343328335833"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="NJo-DD-L08">
             <objects>
-                <navigationController id="PWm-Gn-Tlz" sceneMemberID="viewController">
+                <navigationController modalPresentationStyle="fullScreen" id="PWm-Gn-Tlz" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="V5I-PA-FIo">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" red="0.0" green="0.67450980392156867" blue="0.92941176470588238" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <textAttributes key="titleTextAttributes">
