--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -113,11 +113,66 @@
                                 <action selector="onLogout:" destination="0Jt-0e-jh4" id="ey1-yd-zrf"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Tweet" id="OVx-qn-QnF">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <segue destination="jx8-hj-lTg" kind="presentation" id="XYg-XM-hRe"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Z0M-Hy-VRz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="304.80000000000001" y="-73.313343328335833"/>
+        </scene>
+        <!--Tweet View Controller-->
+        <scene sceneID="GEu-KG-Ktu">
+            <objects>
+                <viewController id="y3z-Jy-a22" customClass="TweetViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="vEC-fT-zjK">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="hUv-rc-a0o">
+                                <rect key="frame" x="0.0" y="44" width="375" height="128"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="Yrn-Ye-F0q"/>
+                                </constraints>
+                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="hUv-rc-a0o" firstAttribute="leading" secondItem="mGv-EV-2tz" secondAttribute="leading" id="Kqm-fb-77D"/>
+                            <constraint firstItem="hUv-rc-a0o" firstAttribute="top" secondItem="mGv-EV-2tz" secondAttribute="top" id="l4Y-E0-Csv"/>
+                            <constraint firstItem="mGv-EV-2tz" firstAttribute="trailing" secondItem="hUv-rc-a0o" secondAttribute="trailing" id="lSh-9W-PDc"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="mGv-EV-2tz"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="ASW-b2-Clw">
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="vMd-ts-Jyw">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="cancel:" destination="y3z-Jy-a22" id="y3m-96-8lv"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Tweet" id="y6I-Jb-E4O">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="tweet:" destination="y3z-Jy-a22" id="z5H-yh-XWb"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tweetTextView" destination="hUv-rc-a0o" id="yDT-v4-F48"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Lg2-kZ-MeL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2002.4000000000001" y="-73.313343328335833"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="NJo-DD-L08">
@@ -138,6 +193,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Ge-Oq-A4f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-460" y="-73"/>
+        </scene>
+        <!--Tweet Navigation Controller-->
+        <scene sceneID="OQC-Au-z10">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" id="jx8-hj-lTg" userLabel="Tweet Navigation Controller" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="jtq-bR-TCV">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.0" green="0.67450980390000004" blue="0.92941176469999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="y3z-Jy-a22" kind="relationship" relationship="rootViewController" id="vaZ-FW-Xgc"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9Cw-ib-g32" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1061.5999999999999" y="-73.313343328335833"/>
         </scene>
     </scenes>
 </document>
